test/expected/declare_vri.out
declare r as volatile reference to int
        ^
9: error: reference not supported in C
